<resources>
    <string name="app_name">Presensi Cafe</string>
    <string name="total_durasi_jaga">TOTAL DURASI JAGA</string>
    <string name="waktu_durasi">4 jam 10 menit</string>
    <string name="tanggal_mulai">Terhitung mulai 21 Februari 2018</string>
    <string name="tombol_jaga">JAGA</string>
    <string name="status">Klik tombol di atas\njika ingin mulai jaga</string>
    <string name="tambah">Tambah Pegawai Baru</string>
    <string name="summary_durasi_jaga">Summary Durasi Jaga Bulan Ini</string>
    <string name="paling_sedikit">Paling Sedikit</string>
    <string name="paling_banyak">Paling Banyak</string>
    <string name="manajemen_pegawai">Manajemen Pegawai</string>

    <string name="shared_pref_helper">sharedPrefHelper</string>

    <string name="fence_location_key">locationFenceKey</string>

    <string name="google_play_services_key">AIzaSyAuvyYEK-wxRrOg8UTgGpx9kaxmYi-x1bg</string>
</resources>
