<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="papb.com.presensicafe.PegawaiHomeActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_height="200dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="#ff5848">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:text="@string/total_durasi_jaga"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/textView2"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/waktu_durasi"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/tanggal_mulai"
            android:textColor="@color/background" />


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_height="200dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/background">

        <Button
            android:id="@+id/buttonjaga"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/button_color_primary_round"
            android:text="@string/tombol_jaga"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>

</LinearLayout>

